ライブラリを分ける

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,25 @@ cmake_minimum_required(VERSION 2.8)
 
 project( Main ) # this is case sensitive
 
+add_subdirectory(lib)
+
 add_executable( Main main.cpp )
 add_definitions("-std=c++11")
 
+include_directories(${Main_SOURCE_DIR}/lib/include)
+target_link_libraries(Main lib)
+
 find_package(OpenGL REQUIRED)
 if (OPENGL_FOUND)
+    message("OpenGL_FOUND")
     include_directories(${OPENGL_INCLUDE_DIRS})
     target_link_libraries(Main ${OPENGL_LIBRARIES})
-endif()
-
-find_package(glfw3 3.2 REQUIRED)
-if(GLFW_FOUND)
-    include_directories(${GLFW_INCLUDE_DIRS})
-    target_link_libraries(Main ${GLFW_LIBRARIES})
+    target_link_libraries(Main glfw)
 endif()
 
 find_package(GLEW REQUIRED)
 if (GLEW_FOUND)
+    message("GLEW_FOUND")
     include_directories(${GLEW_INCLUDE_DIRS})
     target_link_libraries(Main ${GLEW_LIBRARIES})
 endif()
